arreglo del  home

--- a/index.html
+++ b/index.html
@@ -9,7 +9,131 @@
 		<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+		<header>
+			<nav class="navbar navbar-default">
+			  <div class="container">
+			    <!-- Brand and toggle get grouped for better mobile display -->
+			    <div class="navbar-header">
+			      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+			        <span class="sr-only">Toggle navigation</span>
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			      </button>
+			    </div>
+			    <!-- Collect the nav links, forms, and other content for toggling -->
+			    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			    	<ul class=" nav navbar-nav">
+			    		<li><a href="#">Sobre nosotros </a></li>| 
+			      		<li><a href="#">Oportunidades</a></li>
+			      		<li><div class="button">
+  							<button type="button" class=" es btn btn-warning">Es</button></div>
+  						</li>
+ 							<li><div class="button">
+  							<button type="button" class=" ingresar btn btn-warning">Ingresar</button></div>
+  						</li>
+			      	</ul>
+			    </div><!-- /.navbar-collapse -->
+			  </div><!-- /.container-fluid -->
+			</nav>	
+		</header>
+		<section class="portada hidden-xs">
+			<div class="container-fluid">
+					<div class="row">
+						<div class="col-sm-6"></div>
+					 	<div class="col-sm-6">
+					 		<div class="logo">
+								<img src="img/iconos/iconos-20.png">
+							</div>
+							<p class="p-largo">Identificamos al mejor talento y maximizamos su potencial</p>
+							<p class="p-medium">Con una evalucacion rigurosa, tanto de postulantes como de puestos laborales,identificamos la sinergia óptima entre trabajador y empresa aumentando la productividad , la permanencia y la felicidad de los trabajadores</p>
+							<div class="button">
+								<button type="button" class=" red btn btn-danger">Crea tu perfil</button>
+							</div>
+					 	</div>
+					 </div>
+					 <center><img  class="btn-circular"src="img/iconos/iconos-15.png"></center>
+				</div>
+			</section>
+			<section class="portada2 hidden-md hidden-lg">
+			<div class="container-fluid">
+		 		<div class="logo">
+					<img src="img/iconos/iconos-20.png">
+				</div>
+				<p class="p-largo">Identificamos al mejor talento y maximizamos su potencial</p>
+				<p class="p-medium">Con una evalucacion rigurosa, tanto de postulantes como de puestos laborales,identificamos la sinergia óptima entre trabajador y empresa aumentando la productividad , la permanencia y la felicidad de los trabajadores</p>
+				<div class="button">
+					<button type="button2" class=" red btn btn-danger">Crea tu perfil</button>
+				</div>
+				<img  class="imagen-responsive"src="img/foto-landing-09.png">
+			</div>
+			</section>
+			<section class="metodologia">
+				<div class="row">
+					<div class="col-md-12">
+						<b><p>Nuestra metodología</p></b>
+						<img class="img-red-izquierda"src="img/iconos/iconos-17.png"><p class="p-rojo">Nuestro exámen es 3 veces más fuerte</p>
+						<p class="p-plomo">que el proceso inetrno aplicado por nuestros propios clientes.</p>
+						<img class="img-red-derecha"src="img/iconos/iconos-18.png">
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-3">
+						<div class="line-1"></div>
+						<div class="tex-1">
+							<h4>
+							Evaluación de competencias
+						</h4>
+						<p>
+							Selección de talento que cuenta con las competencias claves para el puesto
+						</p>
+						</div>
+					</div>
+					<div class="col-md-6">
+						<div class="circulo-grande">
+							<div class="circulo-chico">
+								<div class="p-circulo">
+									<p class="p-circulo">
+										Obtenemo el perfil profesional del postulante mediante un analisis compelto que identifica el mejor talento para cualquier puesto.
+									</p>
+									<p>
+										Nos basamos en 3 pilares
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="linea-vertical"></div>
+						<div class="tex-2">
+							<h4>
+								Análisis continuo
+							</h4>
+							<p>
+								Actualización continua del perfil óptimo para cada puesto, que permita incorporar cambios a la economía laboral u operaciones internas que impacten el día al día.
+							</p>
+						</div>
+					</div>
+					<div class="col-md-3">
+						<div class="line-2">
+
+						</div>
+						<div class="tex-3">
+							<h4>
+								Evaluación de preferencias
+							</h4>
+							<p>
+								Selección de talento que permanecerá más tiempo por tener preferencias de trabajo alineadas con el puesto.
+							</p>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="postulantes">
+				<p>Farolito para postulantes</p>
+			</section>
+		</div>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 		<!-- Javascripts de Bootstrap -->
 		<script src="javascript/b3/collapse.js"></script>
 		<script src="javascript/b3/transition.js"></script>
