--- a/index.html
+++ b/index.html
@@ -229,6 +229,18 @@
      				<p>Asesoría dirigida a nuevos trabajadores durante el proceso de inserción.</p>
      			</div>
      		</div>
+     		<div>
+						<button type="button" class="boton-contactanos btn btn-danger">Contáctanos</button>
+				</div>
+				<div class="row">
+					<div class="col-md-12">
+						<center><img  class="btn-circulo-3"src="img/iconos/iconos-15.png"></center>
+					</div>
+				</div>
+      </section>
+      <section>
+
+
       </section>
 		</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
