--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 					 	</div>
 					 </div>
 					 <center><img  class="btn-circular"src="img/iconos/iconos-15.png"></center>
-				</div>
-			</section>
-			<section class="portada2 hidden-md hidden-lg">
+			</div>
+		</section>
+		<section class="portada2 hidden-md hidden-lg">
 			<div class="container-fluid">
 		 		<div class="logo-2">
 					<img src="img/iconos/logo-farolito-114x40.png">
@@ -89,160 +89,320 @@
 				<p class="p-medium">Con una evalucacion rigurosa, tanto de postulantes como de puestos laborales,identificamos la sinergia óptima entre trabajador y empresa aumentando la productividad , la permanencia y la felicidad de los trabajadores</p>
 				<img  class="imagen-responsive"src="img/foto-landing-09.png">
 			</div>
-			</section>
-			<section class="metodologia">
-				<div class="row">
-					<div class="col-md-12">
-						<b><p>Nuestra metodología</p></b>
-						<img class="img-red-izquierda"src="img/iconos/iconos-17.png"><p class="p-rojo">Nuestro exámen es 3 veces más fuerte</p>
-						<p class="p-plomo">que el proceso inetrno aplicado por nuestros propios clientes.</p>
-						<img class="img-red-derecha"src="img/iconos/iconos-18.png">
+		</section>
+		<section class="metodologia">
+			<div class="row">
+				<div class="col-md-12">
+					<b><p>Nuestra metodología</p></b>
+					<img class="img-red-izquierda"src="img/iconos/iconos-17.png"><p class="p-rojo">Nuestro exámen es 3 veces más fuerte</p>
+					<p class="p-plomo">que el proceso inetrno aplicado por nuestros propios clientes.</p>
+					<img class="img-red-derecha"src="img/iconos/iconos-18.png">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-3">
+					<div class="line-1"></div>
+					<div class="tex-1">
+						<h4>
+						Evaluación de competencias
+					</h4>
+					<p>
+						Selección de talento que cuenta con las competencias claves para el puesto
+					</p>
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-md-3">
-						<div class="line-1"></div>
-						<div class="tex-1">
-							<h4>
-							Evaluación de competencias
-						</h4>
-						<p>
-							Selección de talento que cuenta con las competencias claves para el puesto
-						</p>
-						</div>
-					</div>
-					<div class="col-md-6">
-						<div class="circulo-grande">
-							<div class="circulo-chico">
-								<div class="p-circulo">
-									<p class="p-circulo">
-										Obtenemo el perfil profesional del postulante mediante un analisis compelto que identifica el mejor talento para cualquier puesto.
-									</p>
-									<p>
-										Nos basamos en 3 pilares
-									</p>
-								</div>
+				<div class="col-md-6">
+					<div class="circulo-grande">
+						<div class="circulo-chico">
+							<div class="p-circulo">
+								<p class="p-circulo">
+									Obtenemo el perfil profesional del postulante mediante un analisis compelto que identifica el mejor talento para cualquier puesto.
+								</p>
+								<p>
+									Nos basamos en 3 pilares
+								</p>
 							</div>
 						</div>
-						<div class="linea-vertical"></div>
-						<div class="tex-2">
-							<h4>
-								Análisis continuo
-							</h4>
-							<p>
-								Actualización continua del perfil óptimo para cada puesto, que permita incorporar cambios a la economía laboral u operaciones internas que impacten el día al día.
-							</p>
-						</div>
 					</div>
-					<div class="col-md-3">
-						<div class="line-2">
-						</div>
-						<div class="tex-3">
-							<h4>
-								Evaluación de preferencias
-							</h4>
-							<p>
-								Selección de talento que permanecerá más tiempo por tener preferencias de trabajo alineadas con el puesto.
-							</p>
-						</div>
+					<div class="linea-vertical"></div>
+					<div class="tex-2">
+						<h4>
+							Análisis continuo
+						</h4>
+						<p>
+							Actualización continua del perfil óptimo para cada puesto, que permita incorporar cambios a la economía laboral u operaciones internas que impacten el día al día.
+						</p>
 					</div>
 				</div>
-				<div class="ver-mas">
-					<center><button type="button" class="btn btn-info">Ver más</button></center>
-				</div>
-				<div class="row">
-					<div class="col-md-12">
-						<center><img  class="btn-circulo-2"src="img/iconos/iconos-15.png"></center>
+				<div class="col-md-3">
+					<div class="line-2">
+					</div>
+					<div class="tex-3">
+						<h4>
+							Evaluación de preferencias
+						</h4>
+						<p>
+							Selección de talento que permanecerá más tiempo por tener preferencias de trabajo alineadas con el puesto.
+						</p>
 					</div>
 				</div>
-			</section>
-			<section class="postulantes">
-          <div class="container center">
-             <div class="farolito">
-                <h1>Farolito para postulantes</h1>
-                <h3>Alcanza tu potencial profesional con Farolito</h3>
-             </div>
-            <div class="row">
-              <div class="col-md-2">
-                 <ul class="numeros">
-                  <li> <img src="img/iconos/numero-1.png"></li>
-                  <li> <img src="img/iconos/numero-2.png"></li>
-                  <li> <img src="img/iconos/numero-3.png"></li>
-                 </ul>
-              </div>
-              <div class="col-md-3">
-                 <ul class="titulos">
-                  <li><h3>Crea tu perfil</h3></li>
-                  <li><h3>Postula a oportunidades laborales</h3></li>
-                  <li><h3>Mejora tu perfil profesional</h3></li>
-                 </ul>
-              </div>
-              <div class="col-md-2">
-                 <ul class="imagenes">
-                  <li><img src="img/iconos/iconos-09.png"></li>
-                  <li><img src="img/iconos/iconos-10.png"></li>
-                  <li><img src="img/iconos/iconos-11.png"></li>
-                 </ul>
-              </div>
-              <div class="line4"></div>
-              <div class="line5"></div>
-              <div class="line6"></div>
-              <div class="col-md-5">
-                 <ul class="descripcion">
-                  <li><h3>Ingresa tus datos en nuestra página y forma parte de nuestra comunidad.</h3></li>
-                  <li><h3>Conoce en minutos si cumples con los requisitos para el puesto. Te enviamos correos con las oportunidade.</h3></li>
-                  <li><h3> Participa en uno de nuestros cursos de Career Coaching y aprende maneras de superar desafíos y salir adelante en el ambiente laboral.</h3></li>
-                 </ul>
-              </div>
-            </div>
+			</div>
+			<div class="ver-mas">
+				<center><button type="button" class="btn btn-info">Ver más</button></center>
+			</div>
+			<div class="row">
+				<div class="col-md-12">
+					<center><img  class="btn-circulo-2"src="img/iconos/iconos-15.png"></center>
+				</div>
+			</div>
+		</section>
+		<section class="postulantes">
+       <div class="container center">
+         <div class="farolito">
+            <h1>Farolito para postulantes</h1>
+            <h3>Alcanza tu potencial profesional con Farolito</h3>
          </div>
-         <div class="ver-oportunidades">
-							<center><button type="button" class="btn btn-info">Ver oportunidades</button></center>
-					</div>
-					<div class="row">
-					<div class="col-md-12">
-						<center><img  class="btn-circulo-2"src="img/iconos/iconos-15.png"></center>
-					</div>
-				</div>
-      </section>
-      <section class="farolito-para-empresas">
-      	<h3>Farolito para empresas</h3>
-      	<h2>Contrata al mejor talento</h2>
-     		<hr></hr>
-     		<p>Somos el proveedor estrategicos para bajar la rotacion y subir la</p>
-     		<p>productividad de los trabajadores</p>
-     		<div class="row">
-     			<div class="col-md-4">
-     				<img src="img/iconos/iconos-03.png">
-     				<h2>Evaluar postulantes</h2>
-     				<p>El exámen farolito identifica a las personas que no solamente harán bien el trabajo, si no que permaneceran más tiempo en él.</p>
-     				<span>más información</span>
-     			</div>
-     			<div class="col-md-4">
-     				<img src="img/iconos/iconos-04.png">
-     				<h2>Diagnóstico de la rotación</h2>
-     				<p>Revisión de datos manejados por su empresan para identificar a los contribuidores escondidos de la rotación.</p>
-     			</div>
-     			<div class="col-md-4">
-     				<img src="img/iconos/iconos-05.png">
-     				<h2>Coaching laboral</h2>
-     				<p>Asesoría dirigida a nuevos trabajadores durante el proceso de inserción.</p>
-     			</div>
-     		</div>
-     		<div>
-						<button type="button" class="boton-contactanos btn btn-danger">Contáctanos</button>
+         <div class="row">
+           <div class="col-md-2">
+             <ul class="numeros">
+              <li> <img src="img/iconos/numero-1.png"></li>
+              <li> <img src="img/iconos/numero-2.png"></li>
+              <li> <img src="img/iconos/numero-3.png"></li>
+             </ul>
+           </div>
+            <div class="col-md-3">
+               <ul class="titulos">
+                <li><h3>Crea tu perfil</h3></li>
+                <li><h3>Postula a oportunidades laborales</h3></li>
+                <li><h3>Mejora tu perfil profesional</h3></li>
+               </ul>
+            </div>
+            <div class="col-md-2">
+               <ul class="imagenes">
+                <li><img src="img/iconos/iconos-09.png"></li>
+                <li><img src="img/iconos/iconos-10.png"></li>
+                <li><img src="img/iconos/iconos-11.png"></li>
+               </ul>
+            </div>
+            <div class="line4"></div>
+            <div class="line5"></div>
+            <div class="line6"></div>
+            <div class="col-md-5">
+               <ul class="descripcion">
+                <li><h3>Ingresa tus datos en nuestra página y forma parte de nuestra comunidad.</h3></li>
+                <li><h3>Conoce en minutos si cumples con los requisitos para el puesto. Te enviamos correos con las oportunidade.</h3></li>
+                <li><h3> Participa en uno de nuestros cursos de Career Coaching y aprende maneras de superar desafíos y salir adelante en el ambiente laboral.</h3></li>
+               </ul>
+            </div>
+          </div>
+       </div>
+       <div class="ver-oportunidades">
+						<center><button type="button" class="btn btn-info">Ver oportunidades</button></center>
 				</div>
 				<div class="row">
-					<div class="col-md-12">
-						<center><img  class="btn-circulo-3"src="img/iconos/iconos-15.png"></center>
-					</div>
+				<div class="col-md-12">
+					<center><img  class="btn-circulo-2"src="img/iconos/iconos-15.png"></center>
 				</div>
-      </section>
-      <section>
-
-
-      </section>
-		</div>
+			</div>
+    </section>
+    <section class="farolito-para-empresas">
+    	<div class="container">
+    		<h3>Farolito para empresas</h3>
+    	<h2>Contrata al mejor talento</h2>
+   		<hr>
+   		<p>Somos el proveedor estrategicos para bajar la rotacion y subir la</p>
+   		<p>productividad de los trabajadores</p>
+   		<div class="row">
+   			<div class="col-md-4">
+   				<img src="img/iconos/iconos-03.png">
+   				<h2>Evaluar postulantes</h2>
+   				<p>El exámen farolito identifica a las personas que no solamente harán bien el trabajo, si no que permaneceran más tiempo en él.</p>
+   				<span>más información</span>
+   			</div>
+   			<div class="col-md-4">
+   				<img src="img/iconos/iconos-04.png">
+   				<h2>Diagnóstico de la rotación</h2>
+   				<p>Revisión de datos manejados por su empresan para identificar a los contribuidores escondidos de la rotación.</p>
+   			</div>
+   			<div class="col-md-4">
+   				<img src="img/iconos/iconos-05.png">
+   				<h2>Coaching laboral</h2>
+   				<p>Asesoría dirigida a nuevos trabajadores durante el proceso de inserción.</p>
+   			</div>
+   		</div>
+   		<div>
+					<button type="button" class="boton-contactanos btn btn-danger">Contáctanos</button>
+			</div>
+			<div class="row">
+				<div class="col-md-12 container">
+					<img  class="btn-circulo-3"src="img/iconos/iconos-15.png">
+				</div>
+			</div>
+    	</div>
+    </section>
+    <section class="farolito-para-educacion">
+    	<div class="container">
+    		<h3>Farolito para centros Educativos</h3>
+      	<h2 class="titulo">Desarrolla al mejor talento</h2>
+     		<hr>
+     		<p>Somos la evaluadora que asegura que cada alumno egrese siendo el</p>
+     		<p>mejor profesional que requiere el mercado laboral</p>
+   		<div class="row">
+   			<div class="col-md-4">
+   				<img src="img/iconos/iconos-06.png">
+   				<h4>Filtro de Postulación</h4>
+   				<p>Identificamos a los postulantes con el perfil profesional de alumnos más éxitosos, por carreras.</p>
+   			</div>
+   			<div class="col-md-4">
+   				<img src="img/iconos/iconos-07.png">
+   				<h4>Asesoría integral</h4>
+   				<p>Las caracteristicas psicométricas de alumnos más exitosas varia por carrera y tipo de trabajo.Nosotros recomendamos prácticas y carreras en que el alumno tendrá más exito.</p>
+   			</div>
+   			<div class="col-md-4">
+   				<img src="img/iconos/iconos-08.png">
+   				<h4>Control de calidad</h4>
+   				<p>Asegurar que cada sucursal y cada profesor brinden la misma calidad de formación, evaluando a todos los alumnos con el mismo exámen.</p>
+   			</div>
+   		</div>
+   		<div>
+					<button type="button" class="boton-contactanos-educacion btn btn-danger">Contáctanos</button>
+			</div>
+			<div class="row">
+				<div class="col-md-12 container">
+					<img  class="btn-circulo-3"src="img/iconos/iconos-15.png">
+				</div>
+			</div>
+    	</div>
+    </section>
+    <section class="lista-oportunidades">
+    	<div class="container">
+    		<h3>Lista de oportunidades</h3>
+    		<div class="row">
+    			<div class="col-md-12">
+    				<h4>Asesor de servicio</h4>
+    				<h5>Empresa: Consectetuer adipiscing.</h5>
+    				<h5>Ciudad: Lima</h5>
+    				<h5>Salario: s/0 000.00</h5>
+    				<h5>Horario: 8:00 am - 6:00 pm</h5>
+    				<div class="boton-ver-izquierda">
+							<button type="button" class="boton-ver-mas btn btn-danger">Ver más</button>
+						</div>
+    				<hr>
+    			</div>
+    		</div>
+    		<div class="row">
+    			<div class="col-md-12">
+    				<h4>Practicante de estadística</h4>
+    				<h5>Empresa: Consectetuer adipiscing.</h5>
+    				<h5>Ciudad: Lima</h5>
+    				<h5>Salario: s/0 000.00</h5>
+    				<h5>Horario: 8:00 am - 6:00 pm</h5>
+    				<div class="boton-ver-izquierda">
+							<button type="button" class="boton-ver-mas btn btn-danger">Ver más</button>
+						</div>
+    				<hr>
+    			</div>
+    		</div>
+    		<div class="row">
+    			<div class="col-md-12">
+    				<h4>Supervisor de Seguridad</h4>
+    				<h5>Empresa: Consectetuer adipiscing.</h5>
+    				<h5>Ciudad: Lima</h5>
+    				<h5>Salario: s/0 000.00</h5>
+    				<h5>Horario: 8:00 am - 6:00 pm</h5>
+    				<div class="boton-ver-izquierda">
+							<button type="button" class="boton-ver-mas btn btn-danger">Ver más</button>
+						</div>
+						<hr>
+    			</div>
+    		</div>
+    	</div>
+    	<div class="btn-ver-todos">
+    		<button type="button" class="btn-ver btn btn-danger">Ver todos</button>
+    	</div>
+    	<div class="row">
+				<div class="col-md-12 container ultimo">
+					<img  class="btn-circulo-4"src="img/iconos/iconos-15.png">
+				</div>
+			</div>
+    </section>
+    <section class="blog-farolito">
+    	<div class="container">
+    		<h3>Blog Favorito</h3>
+    		<div class="row row-2">
+    		<div class="col-md-4 texto">
+    			<div class="img-farolito">
+    				<img src="img/iconos/iconos-22.png">
+    			</div>
+    			<a href="">
+    				<div class="lorem">
+    				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod...</p>
+    			</div>
+    			</a>
+    		</div>
+ 				<div class="col-md-4 texto">
+    			<div class="img-farolito">
+    				<img src="img/iconos/iconos-23.png">
+    			</div>
+    			<a href="">
+    				<div class="lorem">
+    				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod...</p>
+    			</div>
+    			</a>
+    		</div>
+    		<div class="col-md-4 texto">
+    			<div class="img-farolito">
+    				<img src="img/iconos/iconos-23.png">
+    			</div>
+    			<a href="">
+    				<div class="lorem">
+    				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod...</p>
+    			</div>
+    			</a>
+    		</div>
+    	</div>
+    	</div>
+    	<div class="ver-oportunidades">
+						<center><button type="button" class=" ver-todos btn btn-info">Ver Todos</button></center>
+				</div>
+    	<div class="row">
+				<div class="col-md-12">
+					<center><img  class="btn-circulo-4 "src="img/iconos/iconos-15.png"></center>
+				</div>
+			</div>
+    </section>
+    <section class="consulta">
+    	<div id="contactanos" class="contacto">
+				<h2>¿Tienes alguna consulta?</h2>
+			</div>
+			<div class="formulario">
+				<form class="form" >
+					<input type="text" name="name" id="name" placeholder="nombre">
+					<input type="text" name="email" id="email" placeholder="email">
+					<textarea rows="4" cols="50"placeholder="mensaje"></textarea>
+					<div class="btn-ver-todos">
+    				<button type="button" class="btn-ver btn btn-danger">Enviar</button>
+    			</div>
+				</form>
+			</div>
+    </section>
+    <div class="footer clearfix">
+     <div>
+     	<img src="img/iconos/iconos-12.png">
+     	</div> 
+     	<div>
+     		<img src="img/iconos/iconos-13.png">
+     	</div>
+     	<div>
+     		<img src="img/iconos/iconos-14.png">
+     	</div> 
+     	<h5>Todos los derechos reservados</h5>
+     	<hr>
+     	<p>"Todos somos genios</p>
+     	<p>pero hay que descubir nuestra capacidad".</p>
+     	<hr>
+     	<p>Con una evaluación personalizada del postulante, análisis comrpensico big Data del puesto y el cliente se puede asegurar la sinergia óptima entre el trabajadpr y empresa, para así lograr más productividad y permanencia.</p>
+    </div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<!-- Javascripts de Bootstrap -->
 	<!--<script src="javascript/b3/collapse.js"></script>
